# Aoc-2024

./: .gitignore  .gitmodules  README.md
Day1/: CMakeLists.txt  day1.cpp  main.cpp
Day1/solver/: CMakeLists.txt
Day1/solver/inc/: solver.hpp
Day1/solver/src/: solver.cpp
Lib/: puzzleFetcher.cpp  puzzleFetcher.hpp
lib/: CMakeLists.txt
lib/puzzleFetcher/: CMakeLists.txt
lib/puzzleFetcher/inc/: puzzleFetcher.hpp
lib/puzzleFetcher/src/: puzzleFetcher.cpp
